@@ -1,3 +1,7 @@
+2006-12-02  Arno Rehn  <arno@arnorehn.de>
+
+	* Added marshalling function for QList<int>
+
 2006-11-26  Arno Rehn  <arno@arnorehn.de>
 
 	* Added marshall_ItemList and all DEF_LIST_MARSHALLER and
